<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">Quake Report</string>
    <!-- Default text to show with the earthquake location ("Near the Pacific-Antarctic Ridge")
 if no specific kilometer distance from the primary location is given [CHAR LIMIT=30] -->
    <string name="near_the">Near the</string>
    <string name="no_earthquakes">No earthquakes found.</string>
    <string name="no_internet_connection">No internet connection.</string>
    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
    <string name="settings_menu_item">Settings</string>
    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">Earthquake Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Strings For Minimum Magnitude Preference [CHAR LIMIT=30] -->
    <string name="settings_min_magnitude_label">Minimum Magnitude</string>
    <string name="settings_min_magnitude_key" translatable="false">min_magnitude</string>
    <string name="settings_min_magnitude_default" translatable="false">6</string>

    <!-- Strings For Maximum Magnitude Preference [CHAR LIMIT=30] -->
    <string name="settings_max_magnitude_label">Maximum Magnitude</string>
    <string name="settings_max_magnitude_key" translatable="false">max_magnitude</string>
    <string name="settings_max_magnitude_default" translatable="false">8</string>

    <!-- Strings For Limit Preference [CHAR LIMIT=30] -->
    <string name="settings_limit_default">10</string>
    <string name="settings_limit_key">limit</string>
    <string name="settings_limit_label">Limit</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_magnitude_value</string>



    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
    <string name="settings_order_by_magnitude_label">Magnitude</string>
    <string name="settings_order_by_magnitude_value" translatable="false">magnitude</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_recent_label">Most Recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">time</string>

    <string name="settings_starttime_default">2018-11-15</string>
    <string name="settings_starttime_key">starttime</string>
    <string name="settings_starttime_label">Start Time</string>

    <string name="settings_endtime_default">2019-11-15</string>
    <string name="settings_endtime_key">endtime</string>
    <string name="settings_endtime_label">End Time</string>


</resources>
