<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_min_magnitude_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_min_magnitude_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_min_magnitude_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_max_magnitude_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_max_magnitude_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_max_magnitude_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_limit_default"
        android:inputType="numberSigned"
        android:key="@string/settings_limit_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_limit_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_starttime_default"
        android:inputType="datetime"
        android:key="@string/settings_starttime_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_starttime_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_endtime_default"
        android:inputType="datetime"
        android:key="@string/settings_endtime_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_endtime_label" />

</PreferenceScreen>